# ax-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  switch_version_ax650.sh
.github/workflows/: build.yml
cmake/: build_func.cmake
docs/: compile.md  compile_620.md  compile_620e.md  compile_650.md  how_to_deploy_custom_model.md
examples/common/: common_func.c  common_func.h  video_demux.hpp
examples/common/common_pipeline/: CMakeLists.txt  common_pipeline.h
examples/common/common_pipeline/ax620/: common_pipeline.cpp  common_pipeline_ivps.cpp
examples/common/common_pipeline/ax620e/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp
examples/libaxdl/: CMakeLists.txt
examples/libaxdl/config/ax620/: custom_model.json  pp_human_seg.json
examples/libaxdl/config/ax650/: yolov5s_face_recognition.json  yolov8_pose.json
examples/libaxdl/include/: ax_model_base.hpp  ax_osd_drawer.hpp  ax_osd_helper.hpp  c_api.h
examples/libaxdl/src/: ax_common_api.cpp  ax_model_base.cpp  ax_model_clip.hpp  ax_model_custom.hpp  ax_model_det.cpp  ax_model_det.hpp  ax_model_ml_sub.cpp  ax_model_ml_sub.hpp  ax_model_multi_level_model.cpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp  ax_model_seg.cpp  ax_model_seg.hpp  c_api.cpp
examples/libaxdl/src/base/: detection.hpp
examples/sample_demux_ivps_npu_hdmi_vo/: CMakeLists.txt  sample_demux_ivps_npu_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp/: CMakeLists.txt  sample_demux_ivps_npu_rtsp.cpp
examples/sample_demux_ivps_npu_rtsp_hdmi_vo/: CMakeLists.txt  sample_demux_ivps_npu_rtsp_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp_vo/: CMakeLists.txt  sample_demux_ivps_npu_rtsp_vo.cpp
examples/sample_demux_ivps_npu_vo/: CMakeLists.txt  sample_demux_ivps_npu_vo.cpp
examples/sample_multi_demux_ivps_npu_hdmi_vo/: CMakeLists.txt  sample_multi_demux_ivps_npu_hdmi_vo.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp/: CMakeLists.txt  sample_multi_demux_ivps_npu_multi_rtsp.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo/: CMakeLists.txt  sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo.cpp
examples/sample_v4l2_ivps_npu_vo/: CMakeLists.txt  sample_v4l2_ivps_npu_vo.cpp
examples/sample_v4l2_user_ivps_npu_vo/: CMakeLists.txt  sample_v4l2_user_ivps_npu_vo.cpp
examples/sample_vin_ivps_npu_hdmi_vo/: CMakeLists.txt  README.md  sample_vin_ivps_npu_hdmi_vo.cpp
examples/sample_vin_ivps_npu_venc_rtsp/: CMakeLists.txt  sample_vin_ivps_npu_venc_rtsp.cpp
examples/sample_vin_ivps_npu_venc_rtsp_vo/: CMakeLists.txt  sample_vin_ivps_npu_venc_rtsp_vo.cpp
examples/sample_vin_ivps_npu_vo/: CMakeLists.txt  sample_vin_ivps_npu_vo.cpp
examples/sample_vin_ivps_npu_vo_h265/: CMakeLists.txt  sample_vin_ivps_npu_vo_h265.cpp
examples/utilities/: ax_version_check.cpp
